# wsreload

./: .gitignore  requirements.txt  setup.cfg  wsreload.py
chrome-wsreload/: background.js
wsreload/: server.py  wsreload_server.py
