[metadata]
name = wsreload
author = Florian Mounier
author-email = paradoxxx.zero@gmail.com
summary = Reload browser tabs through websocket
description-file = README
home-page = https://github.com/paradoxxxzero/wsreload
license = AGPLv3
classifier =
keywords =

[files]
packages =
  wsreload

[entry_points]
console_scripts =
  wsreload-server = wsreload.wsreload_server:main